fixed credits alignment

--- a/src/Credits.css
+++ b/src/Credits.css
@@ -1,5 +1,4 @@
-.Credits,
-.Credits a {
+.Credits {
   text-align: center;
 }
 
